--- a/k8s_manifests/configmap.yaml
+++ b/k8s_manifests/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
-  SYMBOL: "MSFT"
-  NDAYS: "7"
+  symbol: "MSFT"
+  ndays: "7"
 kind: ConfigMap
 metadata:
   name: app-config
