--- a/k8s_manifests/service.yaml
+++ b/k8s_manifests/service.yaml
@@ -3,11 +3,11 @@ kind: Service
 metadata:
   name: stock-price-checker-service
 spec:
-  ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 8000
   selector:
     app: stock-price-checker
-  sessionAffinity: None
-  type: ClusterIP
+  type: NodePort
+  ports:
+    - port: 80
+      targetPort: 8000
+      protocol: TCP
+      name: stock-price-checker
