--- a/k8s_manifests/secrets.yaml
+++ b/k8s_manifests/secrets.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  apiKey: "C227WD9W3LUVKVV9"
+  apiKey: QzIyN1dEOVczTFVWS1ZWOQ==
 kind: Secret
 metadata:
   name: app-secrets
